-*- text -*-

User visible changes

2011-11-17

  * Fixed bug with topright command on other physical screens.

  * -b no longer boolean. Now takes parameter number of pixels.

2011-08-15

  * Fixed crash in one screen scenario.

  * Fixed non-starting bug when on an architecture with unsigned
    chars.

2011-08-12

  * It was still possible to map a window on coordinates outside
    physical screens. Now hopefully fixed, if not perfectly: If a
    window isn't bound to any physical screen it will be mapped on the
    first screen mcwm knows about.

2011-07-26

  * Tabbing warps to middle of window instead of corner. Makes it
    easier if you want to paste something with middle button without
    having to move the pointer.

2011-07-20

   * Speedup when using a trackball or high CPI mouse. Use only mouse
     pointer hints instead of actual mouse events and let mcwm ask for
     pointer position.

     Incidentally, this was originally added in June, 2010, but
     removed a month later after reading Gajewska and Manasse's "Why X
     Is Not Our Ideal Window System". Real experience shows that I was
     mistaken.

2011-06-20

   * Fixed windows were always inserted as the next window in window
     list after changing workspace. Now fixed.

2011-06-01

   * Beginning of RANDR support. mcwm now aware of the number of
     physical screens and their sizes. Move and resize is now limited
     by size of physical screen instead of virtual screen.

   * New keys: Mod4 + , moves focused window to previous screen and
     Mod4 + . moves it to the next screen.

2011-03-29

   * Panels and other windows with window manager override interfered
     with resize. mcwm got confused about the size of the window. Now
     fixed.

2011-03-28

   * Always raise window when fixing it on all workspaces. When moving
     windows between workspaces, this makes us sure we can find it on
     the workspace we're going to. Thanks to Simon Friis for noticing.

2011-03-26
