@@ -4,6 +4,9 @@ User visible changes
 
 2011-11-17
 
+  * In a ConfigureRequest we no longer obey window movements not
+    initiated by the user.
+
   * Fixed bug with topright command on other physical screens.
 
   * -b no longer boolean. Now takes parameter number of pixels.
